# motorai_tasks

./: .gitignore  README.md
Task1/: CMakeLists.txt  camera_lidar_fusion.cpp  camera_lidar_fusion.hpp
Task2/: radar_lidar.py
camera_lidar_data/: lidar.pcd  lidar.ply  outfile.txt
